--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,7 @@ jobs:
       fail-fast: false
       matrix:
         os:                 [ 'ubuntu-latest' ]
-        perl:               [ '5.20', '5.22', '5.24', '5.26', '5.28', '5.30', '5.32', '5.32.1', '5.34', '5.34.1', '5.36' ]
+        perl:               [ '5.28', '5.30', '5.32', '5.32.1', '5.34', '5.34.1', '5.36' ]
         coverage:           [ false ]
         threaded:           [ null ]
         extra_dependencies: [ true ]
