--- a/meta/makefile.pret
+++ b/meta/makefile.pret
@@ -8,7 +8,7 @@
 	:runtime-requirement    [ :on "Path::Tiny"^^:CpanId ];
 	:runtime-requirement    [ :on "Text::Glob"^^:CpanId ];
 	:runtime-requirement    [ :on "Import::Into"^^:CpanId ];
-	:runtime-requirement    [ :on "Hooks::AfterRuntime"^^:CpanId ];
+	:runtime-requirement    [ :on "Hook::AfterRuntime"^^:CpanId ];
 	:test-requirement       [ :on "Test::More 0.96"^^:CpanId ];
 	:develop-recommendation [ :on "Dist::Inkt 0.001"^^:CpanId ];
 	:develop-requirement    [ :on "Mite"^^:CpanId ];
