Add 'which' to the DSL as that is very useful

--- a/meta/makefile.pret
+++ b/meta/makefile.pret
@@ -9,6 +9,7 @@
 	:runtime-requirement    [ :on "Text::Glob"^^:CpanId ];
 	:runtime-requirement    [ :on "Import::Into"^^:CpanId ];
 	:runtime-requirement    [ :on "Hook::AfterRuntime"^^:CpanId ];
+	:runtime-requirement    [ :on "File::Which"^^:CpanId ];
 	:test-requirement       [ :on "Test2::V0"^^:CpanId ];
 	:develop-recommendation [ :on "Dist::Inkt 0.001"^^:CpanId ];
 	:develop-requirement    [ :on "Mite"^^:CpanId ];
