Simple demo C++ project which can be built using Fab; author test which builds it. (Requires g++ compiler.)

--- a/meta/makefile.pret
+++ b/meta/makefile.pret
@@ -11,6 +11,7 @@
 	:runtime-requirement    [ :on "Hook::AfterRuntime"^^:CpanId ];
 	:runtime-requirement    [ :on "File::Which"^^:CpanId ];
 	:test-requirement       [ :on "Test2::V0"^^:CpanId ];
+	:test-requirement       [ :on "Capture::Tiny"^^:CpanId ];
 	:develop-recommendation [ :on "Dist::Inkt 0.001"^^:CpanId ];
 	:develop-requirement    [ :on "Mite"^^:CpanId ];
 	.
