--- a/.github/workflows/ci.ini
+++ b/.github/workflows/ci.ini
@@ -4,3 +4,9 @@ false
 'ubuntu-latest'
 [perl]
 '5.28', '5.30', '5.32', '5.32.1', '5.34', '5.34.1', '5.36'
+[test]
+- name: Test suite
+  working-directory: ./build/
+  run: prove -br t
+  env:
+    AUTHOR_TESTING: ${{ matrix.coverage }}
