I think this will fix coverage testing issue

--- a/.github/workflows/ci.ini
+++ b/.github/workflows/ci.ini
@@ -7,6 +7,6 @@ false
 [test]
 - name: Test suite
   working-directory: ./build/
-  run: prove -br t
+  run: gha-prove -b -r t
   env:
     AUTHOR_TESTING: ${{ matrix.coverage }}
