Ignore .mite.pm files for coverage, and also Fab::Mite itself

--- a/.github/workflows/ci.ini
+++ b/.github/workflows/ci.ini
@@ -10,3 +10,5 @@ false
   run: gha-prove -b -r t
   env:
     AUTHOR_TESTING: ${{ matrix.coverage }}
+[coverage_options]
+-select_re '^blib/lib/' -ignore_re '[Mm]ite.pm$'
