--- a/meta/makefile.pret
+++ b/meta/makefile.pret
@@ -10,6 +10,7 @@
 	:runtime-requirement    [ :on "Import::Into"^^:CpanId ];
 	:runtime-requirement    [ :on "Hook::AfterRuntime"^^:CpanId ];
 	:runtime-requirement    [ :on "File::Which"^^:CpanId ];
+	:runtime-requirement    [ :on "YAML::PP"^^:CpanId ];
 	:test-requirement       [ :on "Test2::V0"^^:CpanId ];
 	:test-requirement       [ :on "Capture::Tiny"^^:CpanId ];
 	:develop-recommendation [ :on "Dist::Inkt 0.001"^^:CpanId ];
