Minor test case improvements

--- a/.github/workflows/ci.ini
+++ b/.github/workflows/ci.ini
@@ -7,7 +7,7 @@ false
 [test]
 - name: Test suite
   working-directory: ./build/
-  run: gha-prove -b -r t
+  run: gha-prove -b -r -v t
   env:
     AUTHOR_TESTING: ${{ matrix.coverage }}
 [coverage_options]
