Unit tests for Fab::App, and restructure it to be more easily testable (issue #2)

--- a/meta/makefile.pret
+++ b/meta/makefile.pret
@@ -17,6 +17,7 @@
 	:test-requirement       [ :on "Test2::Require::AuthorTesting"^^:CpanId ];
 	:test-requirement       [ :on "Test2::Require::Module"^^:CpanId ];
 	:test-recommendation    [ :on "Capture::Tiny"^^:CpanId ];
+	:test-recommendation    [ :on "File::chdir"^^:CpanId ];
 	:test-recommendation    [ :on "Syntax::Keyword::Try"^^:CpanId ];
 	:test-recommendation    [ :on "Makefile::Parser"^^:CpanId ];
 	:develop-recommendation [ :on "Dist::Inkt 0.001"^^:CpanId ];
